# rc

./: .gitignore  .pre-commit-config.yaml  CLAUDE_PROPOSAL.md  COLLABORATIVE_PROPOSAL.md  DIARY.md  GEMINI_PROPOSAL.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.beads/: dolt-monitor.pid  dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/workflows/: ci.yml
configs/: README.md  llama_reservoir.yaml  lora_training.yaml  track_a_readonly.yaml  track_a_readwrite.yaml  track_c_pretrain.yaml
configs/latent_reasoning/: cloud.yaml  coconut.yaml  sweep.yaml
configs/sweep/: base.yaml  (+15 more)
docs/: gate_a_report.md  gate_b_report.md  gate_c_report.md
scripts/: ablations.py  cloud_setup.sh  coconut_baseline.py  efficiency_benchmark.py  eval_infini_attention.py  eval_llama.py  eval_mamba2.py  eval_qwen35_yarn.py  eval_qwen_vanilla.py  gate_a_analysis.py  gate_b_analysis.py  gate_c_analysis.py  generate_sweep_configs.py  latent_reasoning_sweep.py  sweep_reservoir_hp.py  train_infini_attention.py  train_llama_reservoir.py  train_track_a_readonly.py  train_track_a_readwrite.py  train_track_b_deltanet.py  train_track_b_multi.py  train_track_b_ril.py  train_track_c.py
src/: __init__.py  types.py
tests/: test_benchmarks.py  test_chaos.py  test_curriculum.py  test_deltanet_replace.py  test_esn.py  test_harness.py  test_infini_attention.py  test_interface.py  test_loader.py  test_multi_reservoir.py  test_ril.py  test_rw_transformer.py  test_trainer.py  test_types.py
(+37 files in other folders)
