[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lrs"
version = "0.1.0"
description = "Latent Reservoir Scratchpads for LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "reservoirpy>=0.3",
    "peft>=0.10",
    "wandb>=0.16",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
